# protoc-gen-fake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  gen_fake.sh  release-please-config.json
.cargo/: config.toml
.github/workflows/: build.yml  release-please.yml  release.yml  test.yml
Formula/: protoc-gen-fake.rb
examples/: helper.rs  throwaway.rs
proto/examples/: common.proto  full_customer.proto  simple_user.proto  user.proto
proto/examples/features/: map.proto  oneof.proto
proto/examples/medical/: patient_record.proto
proto/gen_fake/: fake_field.proto
src/: fake_data.rs  generated_files_mod.rs  main.rs  utils.rs
src/gen_prost/: gen_fake.rs
src/gen_protobuf/: fake_field.rs
src/prost_generated/: gen_fake.rs
tests/: integration_test.rs
