[package]
name = "protoc-gen-fake"
version = "0.3.1"
edition = "2024"
authors = ["Mike Williamson"]
description = "A protobuf compiler plugin to generate fake data based on protobuf schema definitions."
license = "Apache-2.0"
repository = "https://github.com/lazarillo/protoc-gen-fake"
readme = "README.md"
keywords = ["protobuf", "fake-data", "protoc-plugin", "data-engineering", "synthetic-data"]
categories = ["development-tools", "command-line-utilities", "development-tools::testing", "encoding"]

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
fake = { version = "4.3.0", features = ["derive", "chrono", "uuid", "base64"] }
log = "0.4.27"
once_cell = "1.21.3"
prost = "0.14.1"
prost-reflect = "0.16.0"
prost-types = "0.14.1"
protobuf = "3.7.2"
rand = "0.9.1"

[build-dependencies]
prost-build = "0.14.1"
protobuf-codegen = "3.7.2"
protobuf-src = "1.1.0"
