[package]
name = "protoc-gen-fake"
version = "0.3.3"
edition = "2024"
authors = ["Mike Williamson"]
description = "A protobuf compiler plugin to generate fake data based on protobuf schema definitions."
license = "Apache-2.0"
repository = "https://github.com/lazarillo/protoc-gen-fake"
readme = "README.md"
keywords = [
    "protobuf",
    "fake-data",
    "protoc-plugin",
    "data-engineering",
    "synthetic-data",
]
categories = [
    "development-tools",
    "command-line-utilities",
    "development-tools::testing",
    "encoding",
]

[dependencies]
base64 = "0.22"
env_logger = "0.11"
fake = { version = "4.3", features = ["derive", "chrono", "uuid", "base64"] }
log = "0.4"
once_cell = "1.21"
prost = "0.14"
prost-reflect = "0.16"
prost-types = "0.14"
rand = "0.9"

[build-dependencies]
prost-build = "0.14"
